--- a/style.css
+++ b/style.css
@@ -26,6 +26,21 @@ body {
     align-content: center;
 }
 
+#choice {
+    display: flex;
+    flex-direction: column;
+}
+
+i {
+    font-size: 3em;
+
+}
+
+i:hover {
+    cursor: pointer;
+    color: #00d0ff;
+}
+
 #joueur1 {
     width: 30%;
     height: 50%;
