--- a/style.css
+++ b/style.css
@@ -10,8 +10,17 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #548fa4;
 
+}
 
+#titre {
+    border: inset 8px #007eff;
+    border-radius: 20px;
+    margin-top: 20px;
+    padding: 15px;
+    background-color: #1f637c;
+    color: #dcfff2;
 }
 
 #jeu {
@@ -26,6 +35,7 @@ body {
     justify-content: center;
     align-items: center;
     align-content: center;
+    margin: 20px;
 }
 
 #choice {
@@ -41,27 +51,19 @@ body {
 
 }
 
-#icone1:hover {
-    cursor: pointer;
-    color: #00d0ff;
-}
 
 #icone2 {
     font-size: 3em;
 
 }
 
-#icone2:hover {
-    cursor: pointer;
-    color: #00d0ff;
-}
 
 #icone3 {
     font-size: 3em;
 
 }
 
-#icone3:hover {
+button:hover {
     cursor: pointer;
     color: #00d0ff;
 }
